# rust-quickie

./: Cargo.toml  README.md
src/: main.rs
