[package]
name = "rust-quickie"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to quickly run single-file rust apps in a sandboxed environment"
license = "MIT"
homepage = "https://github.com/rookieCookies/rust-quickie"
repository = "https://github.com/rookieCookies/rust-quickie"
documentation = "https://docs.rs/rust-quickie"
readme = "README.md"
